Dark mode: Fix active menu item color

--- a/src/site/_assets/css/savjee.header.scss
+++ b/src/site/_assets/css/savjee.header.scss
@@ -111,7 +111,7 @@ header {
             ul li a{
                 color: #fff;
 
-                &:hover{
+                &:hover, &.active{
                     color: #fff;
                 }
 
